[package]
name = "tulna-rs"
version = "0.1.2"
edition = "2021"
authors = ["Kush Bisen <mailkushbisen@gmail.com>"]
description = "A Rust library for RDF graph isomorphism and semantic query equivalence checking using an efficient hash-based grounding algorithm to detect the graph isomorphism."
license = "MIT"
repository = "https://github.com/SolidLabResearch/tulna-rs"
homepage = "https://github.com/SolidLabResearch/tulna-rs"
documentation = "https://docs.rs/tulna-rs"
readme = "README.md"
keywords = ["sparql", "rspql", "janusql", "rdf", "query-isomorphism"]
categories = ["parser-implementations", "algorithms"]
exclude = ["src/main.rs"]

[dependencies]
regex = "1.12.2"
murmur3 = "0.5"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "iso_benchmark"
harness = false